Inconsistent style with "Open on Mouse Over" option #63898

Closed
opened 2019-04-26 07:28:29 +02:00 by Oleg · 3 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 950/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.01

Blender Version
Broken: version: 2.80 (sub 59), branch: blender2.7, commit date: 2019-04-25 22:14, hash: 16639c6f1a
Worked: (optional)

Short description of error
When "Open on Mouse Over" option enable buttons highlight is different depending on hovering or pressing menu.

Exact steps for others to reproduce the error
Enable "Open on Mouse Over" option.
Try to hover to popovers/menus and go through options - highlight is blue. Then do the same with pressing on popups/menus - highlight is gray.

test.gif

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 950/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.01 **Blender Version** Broken: version: 2.80 (sub 59), branch: blender2.7, commit date: 2019-04-25 22:14, hash: `16639c6f1a` Worked: (optional) **Short description of error** When "Open on Mouse Over" option enable buttons highlight is different depending on hovering or pressing menu. **Exact steps for others to reproduce the error** Enable "Open on Mouse Over" option. Try to hover to popovers/menus and go through options - highlight is blue. Then do the same with pressing on popups/menus - highlight is gray. ![test.gif](https://archive.blender.org/developer/F6977844/test.gif)
Author

Added subscriber: @DotBow

Added subscriber: @DotBow
Campbell Barton self-assigned this 2019-04-26 09:25:31 +02:00

This issue was referenced by d2859237fa

This issue was referenced by d2859237fa108f77814a6270d592b55a2b63c255

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63898
No description provided.