Fix T63898: "Open on Mouse Over" causes inconsistent draw-style